--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
       </ul>
     </main>
-    <script type="module" src="./index.js" />
+    <script type="module" src="https://spotlight-animation.vercel.app/index.js" />
   </body>
 </html>
