--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <li class="card"></li>
         <li class="card"></li>
         <li class="card"></li>
-
       </ul>
     </main>
-    <script type="module" src="https://spotlight-animation.vercel.app/index.js" />
+    <script type="module" src="./index.js" />
   </body>
 </html>
